--- a/recipes.html
+++ b/recipes.html
@@ -1,42 +1,287 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Healthy Recipes for Every Meal</title>
-</head>
-<body>
-	<header>
-		<h1>Healthy Living Mini-Site</h1>
-		<nav>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="nutrition.html">Nutrition</a></li>
-				<li><a href="exercise.html">Exercise</a></li>
-				<li><a href="recipes.html">Recipes</a></li>
-				<li><a href="mindfulness.html">Mindfulness</a></li>
-				<li><a href="resources.html">Resources</a></li>
-			</ul>
-		</nav>
-	</header>
-	<main>
-		<section>
-			<h2>Healthy Recipes for Every Meal</h2>
-			<p>Eating healthy doesn't have to be boring! Check out our collection of healthy and delicious recipes for breakfast, lunch, dinner, and snacks. These recipes are easy to make and perfect for incorporating into a busy lifestyle.</p>
-			<ul>
-				<li><a href="#">Healthy Breakfast Recipes</a></li>
-				<li><a href="#">Healthy Lunch Recipes</a></li>
-				<li><a href="#">Healthy Dinner Recipes</a></li>
-				<li><a href="#">Healthy Snack Recipes</a></li>
-			</ul>
-			<p>Meal planning and preparation can also help make healthy eating easier. Check out our <a href="#">meal planning tips</a> for more information.</p>
-			<p>Remember, nutrition is a key component of a healthy lifestyle. Visit our <a href="nutrition.html">nutrition page</a> to learn more about incorporating healthy foods into your diet.</p>
-			<p>For more healthy cooking inspiration, check out these resources:</p>
-			<ul>
-				<li><a href="#">Cooking Light</a></li>
-				<li><a href="#">EatingWell</a></li>
-				<li><a href="#">Healthy Aperture</a></li>
-			</ul>
-		</section>
-	</main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Healthy Recipes for Every Meal</title>
+  </head>
+  <body>
+    <header>
+      <h1>Healthy Living Mini-Site</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="nutrition.html">Nutrition</a></li>
+          <li><a href="exercise.html">Exercise</a></li>
+          <li><a href="recipes.html">Recipes</a></li>
+          <li><a href="mindfulness.html">Mindfulness</a></li>
+          <li><a href="resources.html">Resources</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2>Healthy Recipes for Every Meal</h2>
+        <p>
+          Eating healthy doesn't have to be boring or tasteless. Here are some
+          delicious and easy-to-make recipes for breakfast, lunch, dinner, and
+          snacks:
+        </p>
+        <h3>Breakfast</h3>
+        <p><strong>1. Berry Smoothie Bowl</strong></p>
+        <p>Ingredients:</p>
+        <ul>
+          <li>1 cup frozen mixed berries</li>
+          <li>1/2 banana</li>
+          <li>1/2 cup almond milk</li>
+          <li>1/4 cup Greek yogurt</li>
+          <li>1/4 cup granola</li>
+          <li>1 tbsp honey</li>
+        </ul>
+        <p>Instructions:</p>
+        <ol>
+          <li>
+            Add the frozen berries, banana, almond milk, and Greek yogurt to a
+            blender and blend until smooth.
+          </li>
+          <li>Pour the smoothie into a bowl and top with granola and honey.</li>
+        </ol>
+
+        <h3>Lunch</h3>
+        <p><strong>2. Mediterranean Quinoa Salad</strong></p>
+        <p>Ingredients:</p>
+        <ul>
+          <li>1 cup quinoa</li>
+          <li>2 cups water</li>
+          <li>1 can chickpeas, drained and rinsed</li>
+          <li>1 red bell pepper, chopped</li>
+          <li>1/2 cup chopped red onion</li>
+          <li>1/2 cup chopped fresh parsley</li>
+          <li>1/4 cup crumbled feta cheese</li>
+          <li>2 tbsp olive oil</li>
+          <li>1 tbsp red wine vinegar</li>
+          <li>1 tsp Dijon mustard</li>
+          <li>Salt and pepper to taste</li>
+        </ul>
+        <p>Instructions:</p>
+        <ol>
+          <li>
+            Add the quinoa and water to a pot and bring to a boil. Reduce the
+            heat and simmer for 15-20 minutes, until the quinoa is tender and
+            the water has been absorbed.
+          </li>
+          <li>
+            In a large bowl, combine the cooked quinoa, chickpeas, red bell
+            pepper, red onion, parsley, and feta cheese.
+          </li>
+          <li>
+            In a small bowl, whisk together the olive oil, red wine vinegar,
+            Dijon mustard, salt, and pepper.
+          </li>
+          <li>
+            Pour the dressing over the quinoa mixture and toss to combine.
+          </li>
+        </ol>
+
+        <h3>Dinner</h3>
+        <h4>Grilled Chicken with Roasted Vegetables</h4>
+        <p>
+          This simple yet satisfying meal is packed with protein and nutrients.
+          Serve with a side salad for a complete and balanced meal.
+        </p>
+        <ul>
+          <li>2 boneless, skinless chicken breasts</li>
+          <li>1 zucchini, sliced</li>
+          <li>1 yellow squash, sliced</li>
+          <li>1 red bell pepper, sliced</li>
+          <li>1 red onion, sliced</li>
+          <li>2 tablespoons olive oil</li>
+          <li>2 cloves garlic, minced</li>
+          <li>1 teaspoon dried thyme</li>
+          <li>1 teaspoon dried rosemary</li>
+          <li>1/2 teaspoon salt</li>
+          <li>1/4 teaspoon black pepper</li>
+        </ul>
+        <ol>
+          <li>Preheat the oven to 400°F (200°C).</li>
+          <li>
+            Place the chicken breasts on a baking sheet and season with salt and
+            pepper.
+          </li>
+          <li>
+            In a large bowl, combine the zucchini, yellow squash, red bell
+            pepper, red onion, olive oil, garlic, thyme, rosemary, salt, and
+            black pepper. Toss to coat the vegetables evenly.
+          </li>
+          <li>
+            Spoon the vegetable mixture around the chicken breasts on the baking
+            sheet.
+          </li>
+          <li>
+            Bake for 25-30 minutes, until the chicken is cooked through and the
+            vegetables are tender and slightly caramelized.
+          </li>
+          <li>
+            Remove from the oven and let the chicken rest for 5 minutes before
+            slicing and serving.
+          </li>
+        </ol>
+        <h4>Vegetarian Chili</h4>
+        <p>
+          This hearty chili is loaded with vegetables and plant-based protein
+          for a filling and nutritious meal. Serve with a dollop of Greek yogurt
+          and some chopped cilantro for a burst of flavor.
+        </p>
+        <ul>
+          <li>1 tablespoon olive oil</li>
+          <li>1 onion, chopped</li>
+          <li>2 cloves garlic, minced</li>
+          <li>1 red bell pepper, chopped</li>
+          <li>1 green bell pepper, chopped</li>
+          <li>1 jalapeño pepper, seeded and minced</li>
+          <li>1 tablespoon chili powder</li>
+          <li>1 teaspoon ground cumin</li>
+          <li>1/2 teaspoon smoked paprika</li>
+          <li>1/2 teaspoon salt</li>
+          <li>2 cups vegetable broth</li>
+          <li>1 can (14.5 oz) diced tomatoes, undrained</li>
+          <li>1 can (15 oz) black beans, rinsed and drained</li>
+          <li>1 can (15 oz) kidney beans, rinsed and drained</li>
+          <li>1 can (15 oz) corn, drained</li>
+        </ul>
+        <ol>
+          <li>
+            In a large pot or Dutch oven, heat the olive oil over medium-high
+            heat.
+          </li>
+          <li>
+            Add the onion and garlic and sauté for 2-3 minutes, until softened.
+          </li>
+          <li>
+            Add the red and green bell peppers, jalapeño pepper, chili powder,
+            cumin, smoked paprika, and salt. Stir to combine and cook for
+            another 2-3 minutes.
+          </li>
+          <li>
+            Add the vegetable broth, diced tomatoes (with their juices), black
+            beans, kidney beans, and corn. Stir to combine.
+          </li>
+          <li>
+            Bring the mixture to a boil, then reduce the heat and simmer for
+            20-25 minutes, until the chili has thickened and the vegetables are
+            tender.
+          </li>
+          <li>
+            Stir in the lime juice and cilantro, and season with salt and pepper
+            to taste.
+          </li>
+
+          <li>
+            Divide the chili among bowls and top with avocado, shredded cheese,
+            and additional cilantro, if desired.
+          </li>
+        </ol>
+
+        <h3>Snack</h3>
+
+        <h4>Fruit and Yogurt Parfait</h4>
+
+        <p>
+          This refreshing and healthy snack is perfect for any time of day. It's
+          packed with protein, fiber, and vitamins, and is a great way to
+          satisfy your sweet tooth without indulging in unhealthy treats.
+        </p>
+
+        <h5>Ingredients:</h5>
+
+        <ul>
+          <li>1 cup Greek yogurt</li>
+          <li>
+            1/2 cup chopped fresh fruit (such as berries, kiwi, or pineapple)
+          </li>
+          <li>1/4 cup granola</li>
+          <li>1 tablespoon honey</li>
+        </ul>
+
+        <h5>Instructions:</h5>
+
+        <ol>
+          <li>In a small bowl, mix together the Greek yogurt and honey.</li>
+          <li>In a separate bowl, layer the chopped fruit and granola.</li>
+          <li>Top the fruit and granola with the yogurt mixture.</li>
+          <li>Enjoy immediately or store in the refrigerator for later.</li>
+        </ol>
+
+        <h2>Meal Planning and Preparation Tips</h2>
+
+        <p>
+          Meal planning and preparation is key to maintaining a healthy diet.
+          Here are some tips to help you get started:
+        </p>
+
+        <ul>
+          <li>
+            Plan your meals ahead of time to ensure that you have all the
+            necessary ingredients on hand.
+          </li>
+          <li>
+            Cook large batches of food and freeze individual portions for later
+            use.
+          </li>
+          <li>
+            Invest in a slow cooker or pressure cooker to make meal preparation
+            easier and more convenient.
+          </li>
+          <li>
+            Keep healthy snacks, such as fresh fruit and nuts, on hand to avoid
+            unhealthy snacking.
+          </li>
+          <li>
+            Pre-cut vegetables and store them in the refrigerator for easy use
+            in salads, stir-fries, and other dishes.
+          </li>
+          <li>
+            Experiment with different herbs and spices to add flavor to your
+            meals without adding extra calories.
+          </li>
+        </ul>
+
+        <h2>Additional Resources</h2>
+
+        <p>
+          To wrap up, there are countless resources available online to help you
+          find healthy and delicious recipes for every meal of the day. Some of
+          the best resources include:
+        </p>
+
+        <ul>
+          <li>
+            <a href="https://www.eatright.org/"
+              >Academy of Nutrition and Dietetics</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.foodnetwork.com/healthy/packages/healthy-every-week"
+              >Food Network's Healthy Every Week</a
+            >
+          </li>
+          <li><a href="https://www.healthyeating.org/">Healthy Eating</a></li>
+          <li><a href="https://www.eatingwell.com/">EatingWell</a></li>
+          <li><a href="https://www.cookinglight.com/">Cooking Light</a></li>
+        </ul>
+        <p>
+          These websites offer a wide variety of recipes, from quick and easy
+          meals to more elaborate dishes for special occasions. They also
+          provide tips for meal planning and preparation, so you can save time
+          and money while still eating healthy.
+        </p>
+
+        <p>
+          Remember, a healthy diet doesn't have to be boring or bland. With a
+          little creativity and the right resources, you can enjoy delicious,
+          nutritious meals that will help you feel your best.
+        </p>
+      </section>
+    </main>
+  </body>
 </html>
