--- a/exercise.html
+++ b/exercise.html
@@ -21,28 +21,110 @@
 	<main>
 		<section>
 			<h2>Benefits of Exercise for a Healthy Lifestyle</h2>
-			<p>Regular exercise is essential for maintaining a healthy lifestyle. Exercise helps reduce the risk of chronic diseases, improves mental health, and can even increase life expectancy. Here are some tips for getting started with an exercise routine:</p>
+			<p>Regular exercise is essential for maintaining a healthy lifestyle. Here are some benefits of exercise:</p>
+			<div>
+				<h3>1. Weight management:</h3>
+				<p>Exercise can help you maintain a healthy weight or lose weight if you need to. When you engage in physical activity, your body burns calories, which can help you lose fat and build muscle mass.</p>
+			</div>
+			<div>
+				<h3>2. Improved mood:</h3>
+				<p>Exercise can help improve your mood and reduce feelings of stress, anxiety, and depression. When you engage in physical activity, your body releases endorphins, which are natural chemicals that can improve your mood and make you feel good.</p>
+			</div>
+			<div>
+				<h3>3. Lower risk of chronic diseases:</h3>
+				<p>Regular exercise can help reduce your risk of chronic diseases, such as heart disease, diabetes, and certain types of cancer. Exercise can help improve your cardiovascular health, regulate your blood sugar levels, and reduce inflammation in your body.</p>
+			</div>
+			<div>
+				<h3>4. Increased energy:</h3>
+				<p>Exercise can increase your energy levels and reduce feelings of fatigue. When you engage in physical activity, your body releases energy-boosting hormones, such as adrenaline and cortisol.</p>
+			</div>
+			<h2>Getting Started with Exercise</h2>
+			<p>Getting started with exercise can be challenging, but there are some tips that can help:</p>
+			<div>
+				<h3>1. Start small:</h3>
+				<p>Start with small, achievable goals, such as taking a 10-minute walk every day. Gradually increase the intensity and duration of your exercise as your fitness level improves.</p>
+			</div>
+			<div>
+				<h3>2. Find an activity you enjoy:</h3>
+				<p>Choose an activity that you enjoy, such as walking, swimming, or dancing. This will make it more likely that you will stick with it in the long run.</p>
+			</div>
+			<div>
+				<h3>3. Get support:</h3>
+				<p>Get support from friends, family, or a personal trainer. Having someone to exercise with or to hold you accountable can help you stay motivated.</p>
+			</div>
+			<h2>Types of Exercise</h2>
+			<p>There are many different types of exercise, each with its own benefits:</p>
+			<div>
+				<h3>1. Cardiovascular exercise:</h3>
+				<p>Cardiovascular exercise, also known as cardio, is any type of exercise that increases your heart rate and works your cardiovascular system. This type of exercise is important for maintaining a healthy heart and reducing your risk of heart disease.</p>
+			<p>Examples of cardiovascular exercise include:</p>
 			<ul>
-				<li>Start slowly and gradually increase intensity</li>
-				<li>Choose activities that you enjoy, such as walking, swimming, or cycling</li>
-				<li>Try to exercise for at least 30 minutes a day, 5 days a week</li>
-				<li>Include strength training exercises to build muscle and improve bone density</li>
-				<li>Make exercise a part of your daily routine</li>
+				<li>Running or jogging</li>
+				<li>Biking</li>
+				<li>Swimming</li>
+				<li>Dancing</li>
+				<li>Jumping rope</li>
+				<li>Walking briskly</li>
 			</ul>
-			<p>There are many different types of exercise, each with its own unique benefits. Some examples include:</p>
+			<p>Cardiovascular exercise can also help with weight loss and management, as it burns calories and increases your metabolism.</p>
+		</div>
+		<div>
+			<h3>2. Strength training:</h3>
+			<p>Strength training, also known as resistance training, is any type of exercise that uses resistance to build muscle and strength. This type of exercise is important for maintaining bone density and preventing age-related muscle loss.</p>
+			<p>Examples of strength training exercises include:</p>
 			<ul>
-				<li><a href="#">Cardiovascular exercise, such as running or cycling, helps improve heart health and endurance</a></li>
-				<li><a href="#">Strength training, such as weightlifting, helps build muscle and improve bone density</a></li>
-				<li><a href="#">Yoga and stretching help improve flexibility and reduce stress</a></li>
+				<li>Weight lifting</li>
+				<li>Bodyweight exercises, such as push-ups and squats</li>
+				<li>Resistance band exercises</li>
 			</ul>
-			<p>In addition to exercise, nutrition is also important for overall health and fitness. Check out our <a href="nutrition.html">nutrition page</a> to learn more about how to incorporate healthy foods into your diet.</p>
-			<p>For more information on exercise and fitness, explore these resources:</p>
+			<p>Strength training can also help with weight loss and management, as it increases your metabolism and helps you burn calories even when you're not exercising.</p>
+		</div>
+		<div>
+			<h3>3. Flexibility and balance:</h3>
+			<p>Flexibility and balance exercises are important for maintaining mobility and reducing the risk of falls, especially as we age. These types of exercises can also help improve posture and relieve muscle tension.</p>
+			<p>Examples of flexibility and balance exercises include:</p>
 			<ul>
+				<li>Yoga</li>
+				<li>Pilates</li>
+				<li>Tai chi</li>
+				<li>Stretching exercises</li>
+			</ul>
+			<p>Flexibility and balance exercises can also help with stress reduction and relaxation.</p>
+		</div>
+		<div>
+			<h3>4. High-intensity interval training (HIIT):</h3>
+			<p>High-intensity interval training, or HIIT, is a type of exercise that alternates periods of intense activity with periods of rest or lower intensity. This type of exercise is a great way to get a full-body workout in a shorter amount of time, and can be effective for both cardiovascular and strength training.</p>
+			<p>Examples of HIIT exercises include:</p>
+			<ul>
+				<li>Sprints</li>
+				<li>Burpees</li>
+				<li>Jumping jacks</li>
+				<li>Mountain climbers</li>
+			</ul>
+			<p>HIIT can be a challenging form of exercise, but it can be very effective for improving cardiovascular fitness, increasing metabolism, and burning calories.</p>
+		</div>
+	</section>
+	<section>
+		<h2>How to Get Started with Exercise</h2>
+		<p>If you're new to exercise or haven't worked out in a while, it's important to start slowly and gradually build up your intensity and duration. Here are some tips to help you get started:</p>
+		<ul>
+			<li>Talk to your doctor before starting any new exercise program, especially if you have any medical conditions or are over 40.</li>
+			<li>Start slow and gradually increase the intensity and duration of your workouts.</li>
+				<li>Choose activities that you enjoy, as you're more likely to stick with them in the long run.</li>
+				<li>Mix up your routine to prevent boredom and challenge your body in new ways.</li>
+				<li>Find a workout buddy or join a group fitness class to stay motivated and accountable.</li>
+				<li>Track your progress and celebrate your successes along the way.</li>
+			</ul>
+			<p>For more information on exercise and fitness, check out these resources:</p>
+			<ul>
+				<li><a href="#">Centers for Disease Control and Prevention - Physical Activity</a></li>
 				<li><a href="#">American Council on Exercise</a></li>
-				<li><a href="#">Centers for Disease Control and Prevention</a></li>
-				<li><a href="#">National Institute on Aging</a></li>
+				<li><a href="#">National Institute of Arthritis and Musculoskeletal and Skin Diseases - Exercise and Physical Activity</a></li>
 			</ul>
 		</section>
 	</main>
+	<footer>
+		<p>&copy; 2023 Healthy Living Mini-Site</p>
+	</footer>
 </body>
 </html>
