--- a/mindfulness.html
+++ b/mindfulness.html
@@ -69,11 +69,11 @@
 		<h3>Resources for Mindfulness and Stress Management</h3>
 		<p>If you're interested in learning more about mindfulness and stress management, here are some resources to check out:</p>
 		<ul>
-			<li><a href="https://www.mindful.org/">Mindful</a>: A website dedicated to mindfulness and meditation, with articles, guided meditations, and more.</li>
-			<li><a href="https://www.headspace.com/">Headspace</a>: An app that provides guided meditations and mindfulness exercises.</li>
-			<li><a href="https://www.calm.com/">Calm</a>: Another popular app for meditation and stress management.</li>
-			<li><a href="https://www.yogajournal.com/">Yoga Journal</a>: A website with information on yoga and mindfulness, including articles, videos, and online classes.</li>
-			<li><a href="https://www.apa.org/topics/mindfulness/">American Psychological Association</a>: A resource for information on the benefits of mindfulness and stress management techniques, including links to research studies and tips for practicing mindfulness.</li>
+			<li><a href="#">Mindful</a>: A website dedicated to mindfulness and meditation, with articles, guided meditations, and more.</li>
+			<li><a href="#">Headspace</a>: An app that provides guided meditations and mindfulness exercises.</li>
+			<li><a href="#">Calm</a>: Another popular app for meditation and stress management.</li>
+			<li><a href="#">Yoga Journal</a>: A website with information on yoga and mindfulness, including articles, videos, and online classes.</li>
+			<li><a href="#">American Psychological Association</a>: A resource for information on the benefits of mindfulness and stress management techniques, including links to research studies and tips for practicing mindfulness.</li>
 		</ul>
 	</section>
 </body>
