--- a/recipes.html
+++ b/recipes.html
@@ -255,19 +255,19 @@
 
         <ul>
           <li>
-            <a href="https://www.eatright.org/"
+            <a href="#"
               >Academy of Nutrition and Dietetics</a
             >
           </li>
           <li>
             <a
-              href="https://www.foodnetwork.com/healthy/packages/healthy-every-week"
+              href="#"
               >Food Network's Healthy Every Week</a
             >
           </li>
-          <li><a href="https://www.healthyeating.org/">Healthy Eating</a></li>
-          <li><a href="https://www.eatingwell.com/">EatingWell</a></li>
-          <li><a href="https://www.cookinglight.com/">Cooking Light</a></li>
+          <li><a href="#">Healthy Eating</a></li>
+          <li><a href="#">EatingWell</a></li>
+          <li><a href="#">Cooking Light</a></li>
         </ul>
         <p>
           These websites offer a wide variety of recipes, from quick and easy
